--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,6 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:orientation="vertical"
             android:paddingLeft="16dp">
 
         <TextView
@@ -40,5 +39,14 @@
             android:textColor="@android:color/white"
             android:textAppearance="?android:textAppearanceMedium"
          />
+
+        <ImageView
+            android:layout_width="124dp"
+            android:layout_height="84dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:id="@+id/image"
+            />
+
         </RelativeLayout>
 </RelativeLayout>
