--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <!-- Background color for the Malls category -->
     <color name="category_malls">#673AB7</color>
 
+    <!-- Background color for the HillStation category -->
+    <color name="category_hillStations">#90A4AE</color>
+
 </resources>
